# cqlparser

./: Cargo.toml  README.md
.github/workflows/: cargo-test.yml
examples/: cli.rs  schema.rs
src/: error.rs  lexer.rs  lib.rs  parser.rs
src/ast/: ddl.rs  dml.rs  mod.rs  query.rs
src/literal/: duration.rs  mod.rs  numeric.rs  uuid.rs
tests/: lexer.rs  parser.rs
