[package]
name = "cqlparser"
version = "0.1.0"
authors = ["Yuki Morishita <mor.yuki@gmail.com>"]
description = "Apache Cassandra CQL parser"
homepage = "https://github.com/yukim/cqlparser"
repository = "https://github.com/yukim/cqlparser"
license = "Apache-2.0"
keywords = ["cassandra", "parser"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.3.0"
serde = { version = "1.0", features = ["derive"] }